# sistema-bancario-portfel

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  init.sql  pyproject.toml
src/: main.py
src/domain/enums/: __init__.py  bank_transaction_type.py
src/domain/errors/: __init__.py  account_error_handler.py  database_error_handler.py  error_constants.py
src/domain/models/: __init__.py  account.py  log.py  logs.py  response.py
src/domain/ports/: __init__.py  uuid_interface.py
src/domain/ports/database/: __init__.py  database_connection_interface.py
src/domain/ports/database/repository/: account_repository_interface.py  logs_repository_interface.py
src/domain/services/: __init__.py  save_logs.py
src/domain/usecases/: __init__.py  create_new_account.py  get_account_by_number.py  get_all_accounts.py  get_statement_by_account_number.py  make_deposit_by_account_number.py  make_transfer_by_accounts_numbers.py  make_withdrawal_by_account_number.py
src/entrypoint/: __init__.py
src/entrypoint/models/: __init__.py  make_deposit_request_model.py  make_transfer_request_model.py  make_withdrawal_request_model.py
src/entrypoint/routes/: __init__.py  accounts_route.py
src/infra/: __init__.py  adapter_manager.py
src/infra/adapter/: uuid.py
src/infra/adapter/database/: __init__.py  database_connection.py  database_factory.py
src/infra/adapter/database/postgres/: account_repository_postgres.py  logs_repository_postgres.py
tests/: uuid_test.py
tests/independent_transactions/: conftest.py  independent_transactions_test.py
